--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,9 @@ MYSQL_ROOT_PASSWORD=rootpassword
 # Notes:
 # - Place this file as ".env" in the repository root or the app's content root.
 # - If DB_PROVIDER is not set or unknown, the API falls back to in-memory repositories.
+
+
+# Swagger/OpenAPI
+# Enable Swagger UI in non-development environments (true/false). Default: false
+# Set to true to access /swagger when ASPNETCORE_ENVIRONMENT=Production
+SWAGGER_ENABLED=false
