--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_NAME=exiledcms
 DB_USER=root
-DB_PASSWORD=yourpassword
+DB_PASSWORD=rootpassword
 
 # PostgreSQL example:
 # DB_PROVIDER=postgresql
@@ -53,3 +53,7 @@ MYSQL_ROOT_PASSWORD=rootpassword
 # Enable Swagger UI in non-development environments (true/false). Default: false
 # Set to true to access /swagger when ASPNETCORE_ENVIRONMENT=Production
 SWAGGER_ENABLED=false
+
+# HTTPS redirection (off by default for containers)
+# If true, the API will redirect HTTP→HTTPS. Enable only when you have TLS configured.
+HTTPS_REDIRECT_ENABLED=false
