--- a/src/MainApi/MainApi.csproj
+++ b/src/MainApi/MainApi.csproj
@@ -10,5 +10,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
+    <PackageReference Include="Otp.NET" Version="2.0.5" />
   </ItemGroup>
 </Project>
