--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ DB_NAME=exiledcms
 DB_USER=root
 DB_PASSWORD=rootpassword
 
+# Optional container port mappings (Docker Compose)
+# MySQL service port exposed on host (defaults to 3306 in compose when unset)
+MYSQL_PORT=3306
+# PostgreSQL service port exposed on host (defaults to 5432 in compose when unset)
+POSTGRES_PORT=5432
+
 # PostgreSQL example:
 # DB_PROVIDER=postgresql
 # DB_HOST=postgres
@@ -30,10 +36,14 @@ ADMIN_PASSWORD=admin123
 API_PORT=5190
 GRAFANA_PORT=3000
 PROMETHEUS_PORT=9090
+# phpMyAdmin (enabled when running with profile: pma)
+PHPMYADMIN_PORT=8081
 
 # Grafana admin credentials
 GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=admin
+# Optional: preinstall Grafana plugins (comma-separated, e.g. grafana-clock-panel)
+# GRAFANA_INSTALL_PLUGINS=
 
 # Prometheus web UI basic auth (optional)
 # To enable, set both variables. Password must be bcrypt-hashed.
@@ -48,7 +58,6 @@ MYSQL_ROOT_PASSWORD=rootpassword
 # - Place this file as ".env" in the repository root or the app's content root.
 # - If DB_PROVIDER is not set or unknown, the API falls back to in-memory repositories.
 
-
 # Swagger/OpenAPI
 # Enable Swagger UI in non-development environments (true/false). Default: false
 # Set to true to access /swagger when ASPNETCORE_ENVIRONMENT=Production
@@ -57,3 +66,6 @@ SWAGGER_ENABLED=false
 # HTTPS redirection (off by default for containers)
 # If true, the API will redirect HTTP→HTTPS. Enable only when you have TLS configured.
 HTTPS_REDIRECT_ENABLED=false
+
+# ASP.NET Core environment (optional). Set to Development to always enable Swagger UI in compose.
+# ASPNETCORE_ENVIRONMENT=Development
