--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
   prometheus:
     image: prom/prometheus:v2.54.1
     container_name: prometheus
+    env_file:
+      - ./.env
     entrypoint: [ "/bin/sh", "/etc/prometheus/entrypoint.sh" ]
     volumes:
       - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
@@ -89,8 +91,6 @@ services:
     environment:
       - PMA_HOST=mysql
       - PMA_PORT=3306
-      - PMA_USER=${DB_USER:-root}
-      - PMA_PASSWORD=${MYSQL_ROOT_PASSWORD:-}
       - UPLOAD_LIMIT=256M
     ports:
       - "${PHPMYADMIN_PORT:-8081}:80"
