--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,22 @@ services:
     networks:
       - backend
 
+  login-frontend:
+    build:
+      context: ./login-frontend
+      dockerfile: Dockerfile
+    container_name: login-frontend
+    env_file:
+      - ./.env
+    environment:
+      - VITE_API_BASE_URL=http://mainapi:8080
+    ports:
+      - "5173:5173"
+    depends_on:
+      - mainapi
+    networks:
+      - backend
+
 networks:
   backend:
 
