--- a/login-frontend/nginx.conf
+++ b/login-frontend/nginx.conf
@@ -9,8 +9,7 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
-  location ~* \.\(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
     try_files $uri =404;
   }
 }
-
