--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,12 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Lightweight health endpoint for reverse proxies and monitoring
+  location = /health {
+    add_header Content-Type text/plain;
+    return 200 'OK';
+  }
+
   location /api/ {
     proxy_pass http://mainapi:8080/api/;
     proxy_set_header Host $host;
