--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "vite": "^4.0.0",
